K8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 870017957268.dkr.ecr.us-east-1.amazonaws.com/nodeapp/frontend:b2a29f5f7439b7e885a518a268ef2da8b6266f17
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 3000
